--- a/AspMvcOnlineCommercialWebProject/AspMvcOnlineCommercialWebProject.csproj
+++ b/AspMvcOnlineCommercialWebProject/AspMvcOnlineCommercialWebProject.csproj
@@ -271,6 +271,7 @@
     <Content Include="Views\Category\AddCategory.cshtml" />
     <Content Include="Views\Category\UpdateCategory.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\AddProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
